--- a/test overlapping/css/mobile.css
+++ b/test overlapping/css/mobile.css
@@ -132,7 +132,8 @@ body {
     position: absolute;
     box-sizing: border-box;
     border: 5px rgb(126, 190, 126) solid;
-    opacity: 0.5;
+    opacity: 0;
+    background: url(../photos/20210502_170024262_iOS.jpg) no-repeat center / cover;
     transition: ease-in-out 5s;
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
