--- a/test overlapping/css/mobile.css
+++ b/test overlapping/css/mobile.css
@@ -10,6 +10,17 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
                   Helvetica, Arial, Ubuntu, sans-serif,
                   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    background-color: rgb(199, 231, 199);
+    }
+    nav{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: rgb(221, 233, 243);
+    position: sticky;
+    top: 0;
+    border: 3px solid rgb(170, 168, 168);
     }
 
     *{
@@ -28,7 +39,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: white;
+        background-color:rgb(194, 226, 194);
     }
     .container{
         width: 90%;
@@ -48,13 +59,13 @@ body {
     .right{
         width: 50%;
         min-height: 400px;
-        background-color: rgb(126, 190, 126);
+        background-color: rgb(174, 223, 174);
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 30px;
         border-radius: 8px;
-        color: white;
+        color:black;
         margin-left: -150px;
         transition: ease-in-out 5s;
     }
@@ -132,13 +143,8 @@ body {
     position: absolute;
     box-sizing: border-box;
     border: 5px rgb(126, 190, 126) solid;
-<<<<<<< HEAD
-    background: url(../photos/20210502_170024262_iOS.jpg) no-repeat center / cover;
-    opacity: 0;
-=======
     opacity: 0;
     background: url(../photos/20210502_170024262_iOS.jpg) no-repeat center / cover;
->>>>>>> 82b84f67484d694b3b2ab6cd4bd38cbc4772d602
     transition: ease-in-out 5s;
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
