--- a/test overlapping/css/mobile.css
+++ b/test overlapping/css/mobile.css
@@ -124,11 +124,11 @@ body {
 
     /* background-image: var; */
     background-size: 200%;
-    pointer-events: none;
+    /* pointer-events: none;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
-            user-select: none;
+            user-select: none; */
   }
    
    
