--- a/test overlapping/css/mobile.css
+++ b/test overlapping/css/mobile.css
@@ -10,17 +10,6 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
                   Helvetica, Arial, Ubuntu, sans-serif,
                   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    background-color: rgb(199, 231, 199);
-    }
-    nav{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: rgb(221, 233, 243);
-    position: sticky;
-    top: 0;
-    border: 3px solid rgb(170, 168, 168);
     }
     nav{
       display: flex;
@@ -49,7 +38,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color:rgb(194, 226, 194);
+        background-color: white;
     }
     .container{
         width: 90%;
@@ -69,13 +58,13 @@ body {
     .right{
         width: 50%;
         min-height: 400px;
-        background-color: rgb(174, 223, 174);
+        background-color: rgb(126, 190, 126);
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 30px;
         border-radius: 8px;
-        color:black;
+        color: white;
         margin-left: -150px;
         transition: ease-in-out 5s;
     }
@@ -134,11 +123,11 @@ body {
 
     /* background-image: var; */
     background-size: 200%;
-    /* pointer-events: none;
+    pointer-events: none;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
-            user-select: none; */
+            user-select: none;
   }
    
    
